--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Dependency directories
 node_modules/
+build/
 
 # Yarn
 yarn-error.log
@@ -14,3 +15,13 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#env
+.env
+advanced-custom-fields-pro/
+
+#VScode
+.vscode/
+
+#dev scripts only
+dev-scripts.php
